--- a/css/estilo_frontend.css
+++ b/css/estilo_frontend.css
@@ -7,8 +7,9 @@
 /* Global ================================ */
 :root {
     --white: rgb(229, 235, 238);
-    --orange: rgb(233, 99, 10);
+    --blue-white: rgba(62, 134, 243, 0.747);
     --black: rgb(0, 0, 0);
+    --black-white: rgba(21, 22, 22, 0.979);
 }
 
 html {
@@ -55,7 +56,7 @@ h2 {
     font-size: 1.6rem;
     line-height: 2.6rem;
     font-family: 'Roboto', sans-serif;
-    color: var(--orange);
+    color: var(--blue-white);
 }   
 /* Links e Buttons =============================*/
 a {
@@ -67,7 +68,7 @@ height: 50px;
 
 border: none;
 color: var(--white);
-background: var(--orange);
+background: var(--blue-white);
 border-radius: 0.25rem;
 cursor: pointer;
 }
@@ -101,12 +102,20 @@ header {
     
 }
 header h2{
-    font-size: 3.6rem;
-    line-height: 2.6rem;
+    font-size: 2.6rem;
+    line-height: 0.6rem;
     font-family: 'Roboto',sans-serif;
     text-align: left;
     margin-left: 5vw;
+    margin-top: 2.5rem;
 }
+
+div.instagram {
+    text-align: right;
+    border: 0px solid #606060;
+
+}
+
 /* Aviso ==========================================*/
 section.aviso {
     display: block;
@@ -144,7 +153,7 @@ div.painel {
     transition: 0.5s;
 }
 div.painel:hover {
-    background-color: var(--orange);
+    background-color: var(--blue-white);
     
 }   
 div.painel h1 {
@@ -160,11 +169,6 @@ div.painel p {
     margin: 3rem;
     font-family: 'Roboto',sans-serif;
     border:0px solid #606060;
-}
-div#instagram{
-    text-align: end;
-    border: 0px solid #606060;
-
 }
 
 
@@ -191,31 +195,11 @@ div#instagram{
     visibility: visible;
 }
 .modal{
-    background: var(--white);
-    padding: 2.4rem;
+    background: var(--black-white);
+    padding: 10.4rem;
     position: relative;
+    border-radius: 2.5rem;
 
-}
-#form {
-    max-width: 500px;
-
-}
-#form h2 {
-    margin-top: 0;
-}
-#form form input {
-border: none;
-border-radius: 0.2rem;
-
-padding: 0.8rem;
-
-width: 100%;
-}
-.input-group {
-    margin-top: 0.8rem;
-}
-.iput-group small {
-    opacity: 0.04;
 }
 .input-group.actions {
     display: flex;
